pagina de inicio feita

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,7 @@
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
-    font-size: 60%; /* controle das medidas rem */
+    font-size: 60%; 
 }
 
 * {
@@ -33,7 +33,7 @@ html, body{
 }
 
 body{
-    background-color: var(--color-background);
+    background-color: var(--color-primary);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,4 +51,11 @@ textarea{
 #container{
     width: 90vh;
     max-width: 700px;
+}
+
+@media(min-width: 700px){
+
+    :root{
+        font-size: 62.5%;
+    }
 }
