--- a/styles/main.css
+++ b/styles/main.css
@@ -18,44 +18,42 @@
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
-    font-size: 60%; 
-}
-
-* {
+    font-size: 60%; /* controle das medidas rem */
+  }
+  
+  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
-}
-
-html, body{
+  }
+  
+  html,
+  body {
     height: 100vh;
-}
-
-body{
-    background-color: var(--color-primary);
+  }
+  
+  body {
+    background: var(--color-background);
     display: flex;
     align-items: center;
     justify-content: center;
-    
-}
-
-body, 
-input,
-button,
-textarea{
+  }
+  
+  body,
+  input,
+  button,
+  textarea {
     font: 500 1.6rem Poppins;
     color: var(--color-text-base);
-}
-
-#container{
-    width: 90vh;
+  }
+  
+  #container {
+    width: 90vw;
     max-width: 700px;
-}
-
-@media(min-width: 700px){
-
-    :root{
-        font-size: 62.5%;
+  }
+  
+  @media (min-width: 700px) {
+    :root {
+      font-size: 62.5%;
     }
-}
+  }
