--- a/src/views/study.html
+++ b/src/views/study.html
@@ -57,7 +57,7 @@
                                 {{ weekday }}
                             </option>
                             {% endfor %}
-                            
+
                         </select>
                     </div>
                     <div class="input-block">
@@ -69,9 +69,13 @@
             </div>
         </header>
         <main>
-            {% for prof in proffy%}
-
-            <article class="teacher-item">
+            {% if proffys.length == 0 %}
+                <p class="no-results">
+                    Nenhum professor encontrado com a sua pesquisa.
+                </p>
+            {% else %}
+             {% for prof in proffys%}
+                <article class="teacher-item">
                 <header>
                     <img src="{{prof.avatar}}" alt="{{prof.name}}">
                     <div>
@@ -91,9 +95,9 @@
                         Entrar em contato
                     </a>
                 </footer>
-            </article>
-            {% endfor %}
-
+                </article>
+                {% endfor %}
+            {% endif %}
         </main>
     </div>
 
